Revision history for Perl extension Getopt::Mixed.

1.09   Mar 10 2007
        - Fix for running with taint checks turned on
        - Getopt::Mixed is now obsolete
        - updated my email address

1.008  Feb 08 1996
        - Performance enhancements and assorted fixes

1.006  Jan 27 1996
        - Allows long options to be abbreviated

1.005  Jan 18 1996
	- First public release